--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
 <!doctype html>
 <html lang="{{ .Site.Language.Lang }}" class="no-js">
     <head>
+        {{ partial "google/adsense" . }}
         {{ block "head" . }}{{ end -}}
     </head>
 
